--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
     "react-loader-spinner": "^6.1.6",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5"
   },
